trying to fix issue with hero width on safari

--- a/styles/fcp.css
+++ b/styles/fcp.css
@@ -3,7 +3,7 @@
 
   grid-column: full-width;
   display: grid;
-  grid-template-columns: subgrid;
+  grid-template-columns: var(--section-template-columns);
   position: relative;
   border-bottom: 4px double var(--color-border-primary);
   padding-block: var(--spacing-8);
